Make visualizer UI 3-cluster aware.
Add AMQ1/AMQ2/AMQ3 cards with configurable label/color and per-cluster snapshot URLs, with DEMO_DATA fallback to keep the UI similar to the amq-multicluster example.