@@ -1,35 +1,33 @@
 package com.demo.legacy.visualizer.api;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import javax.inject.Inject;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 
-import org.eclipse.microprofile.config.inject.ConfigProperty;
+import com.demo.legacy.visualizer.config.VisualizerClustersConfig;
+import com.demo.legacy.visualizer.config.VisualizerClustersConfig.Cluster;
 
 @Path("/api/config")
 @Produces(MediaType.APPLICATION_JSON)
 public class ConfigResource {
 
-  @ConfigProperty(name = "demo.visualizer.snapshot-urls")
-  String snapshotUrls;
+  @Inject
+  VisualizerClustersConfig cfg;
 
-  public record UiConfig(List<String> snapshotUrls) {}
+  public record UiCluster(String id, String label, String color, String snapshotUrl) {}
+
+  public record UiConfig(List<UiCluster> clusters) {}
 
   @GET
   public UiConfig get() {
-    if (snapshotUrls == null || snapshotUrls.isBlank()) {
-      return new UiConfig(List.of());
-    }
-    List<String> urls = Arrays.stream(snapshotUrls.split(","))
-        .map(String::trim)
-        .filter(s -> !s.isBlank())
-        .collect(Collectors.toList());
-    return new UiConfig(urls);
+    List<Cluster> clusters = cfg.clusters();
+    return new UiConfig(clusters.stream()
+        .map(c -> new UiCluster(c.id(), c.label(), c.color(), c.snapshotUrl()))
+        .toList());
   }
 }
 
