@@ -6,9 +6,7 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -16,17 +14,20 @@ import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 
-import org.eclipse.microprofile.config.inject.ConfigProperty;
+import com.demo.legacy.visualizer.config.VisualizerClustersConfig;
+import com.demo.legacy.visualizer.config.VisualizerClustersConfig.Cluster;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 
 @Path("/api/snapshots")
 @Produces(MediaType.APPLICATION_JSON)
 public class SnapshotsResource {
 
-  @ConfigProperty(name = "demo.visualizer.snapshot-urls")
-  String snapshotUrls;
+  @Inject
+  VisualizerClustersConfig cfg;
 
   @Inject
   ObjectMapper mapper;
@@ -35,40 +36,57 @@ public class SnapshotsResource {
       .connectTimeout(Duration.ofSeconds(2))
       .build();
 
-  public record SnapshotEntry(String url, boolean ok, JsonNode snapshot, String error, String fetchedAt) {}
+  public record SnapshotEntry(String id, String label, String color, String url, boolean ok, JsonNode snapshot, String error,
+      String fetchedAt) {}
 
   @GET
   public List<SnapshotEntry> list() {
-    List<String> urls = parseUrls(snapshotUrls);
-    return urls.stream()
-        .map(this::fetchOne)
-        .collect(Collectors.toList());
+    List<Cluster> clusters = cfg.clusters();
+    return clusters.stream().map(this::fetchOne).toList();
   }
 
-  private SnapshotEntry fetchOne(String url) {
+  private SnapshotEntry fetchOne(Cluster c) {
+    if (!c.hasSnapshotUrl()) {
+      return new SnapshotEntry(c.id(), c.label(), c.color(), "DEMO_DATA", true, syntheticSnapshot(c), null, Instant.now().toString());
+    }
+
     try {
       HttpRequest req = HttpRequest.newBuilder()
-          .uri(URI.create(url))
+          .uri(URI.create(c.snapshotUrl()))
           .timeout(Duration.ofSeconds(2))
           .GET()
           .build();
       HttpResponse<String> res = client.send(req, HttpResponse.BodyHandlers.ofString());
       if (res.statusCode() / 100 != 2) {
-        return new SnapshotEntry(url, false, null, "HTTP " + res.statusCode(), Instant.now().toString());
+        return new SnapshotEntry(c.id(), c.label(), c.color(), c.snapshotUrl(), false, null, "HTTP " + res.statusCode(),
+            Instant.now().toString());
       }
       JsonNode node = mapper.readTree(res.body());
-      return new SnapshotEntry(url, true, node, null, Instant.now().toString());
+      return new SnapshotEntry(c.id(), c.label(), c.color(), c.snapshotUrl(), true, node, null, Instant.now().toString());
     } catch (Exception e) {
-      return new SnapshotEntry(url, false, null, e.getClass().getSimpleName() + ": " + e.getMessage(), Instant.now().toString());
+      return new SnapshotEntry(c.id(), c.label(), c.color(), c.snapshotUrl(), false, null,
+          e.getClass().getSimpleName() + ": " + e.getMessage(), Instant.now().toString());
     }
   }
 
-  private static List<String> parseUrls(String raw) {
-    if (raw == null || raw.isBlank()) return List.of();
-    return Arrays.stream(raw.split(","))
-        .map(String::trim)
-        .filter(s -> !s.isBlank())
-        .collect(Collectors.toList());
+  private JsonNode syntheticSnapshot(Cluster c) {
+    long now = System.currentTimeMillis();
+    long received = (now / 1500) % 1000;
+
+    ObjectNode root = mapper.createObjectNode();
+    root.put("received", received);
+    root.put("duplicates", 0);
+
+    ArrayNode last = mapper.createArrayNode();
+    for (int i = 0; i < 5; i++) {
+      ObjectNode item = mapper.createObjectNode();
+      item.put("receivedAt", Instant.ofEpochMilli(now - (i * 1500L)).toString());
+      item.put("eventId", c.id() + "-" + (received - i));
+      item.put("body", "{\"producerId\":\"demo-data\",\"payload\":\"tick\",\"cluster\":\"" + c.label() + "\"}");
+      last.add(item);
+    }
+    root.set("last", last);
+    return root;
   }
 }
 
